[package]
name = "many-secrets-discovery"
version = "0.1.0"
authors = ["aliX <alex@nodle.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
merkle-cbt = { version = "0.3.0", default-features = false }

[lib]
name = "many_secrets_discovery"
path = "lib.rs"
crate-type = [
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "merkle-cbt/std",
]
ink-as-dependency = []
