[package]
name = "single-secret-discovery"
version = "0.1.0"
authors = ["aliX <alex@nodle.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false }
ink_primitives = { version = "4.1.0", default-features = false }
ink_metadata = { version = "3.3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "4.1.0", default-features = false }
ink_storage = { version = "4.1.0", default-features = false }
ink_prelude = { version = "4.1.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "single_secret_discovery"
path = "lib.rs"
crate-type = [
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
