[package]
name = "single-secret-discovery"
version = "0.1.0"
authors = ["aliX <alex@nodle.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
curve25519-dalek = {version = "3.2.1", default-features = false, features = ["u64_backend"] }
[dev-dependencies]
sha2 = "0.9.0"

[lib]
name = "single_secret_discovery"
path = "lib.rs"
crate-type = [
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
